// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectorScreen should match snapshot for channels 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Connect(StatusBar) />
  <View
    style={
      Array [
        Object {
          "marginVertical": 5,
        },
        null,
      ]
    }
  >
    <SearchBarIos
      autoCapitalize="none"
      backgroundColor="transparent"
      blurOnSubmit={true}
      cancelTitle="Cancel"
      inputHeight={33}
      inputStyle={
        Object {
          "backgroundColor": "rgba(61,60,64,0.2)",
          "color": "#3d3c40",
          "fontSize": 15,
        }
      }
      keyboardAppearance="light"
      leftComponent={null}
      onBlur={[Function]}
      onCancelButtonPress={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSearchButtonPress={[Function]}
      onSelectionChange={[Function]}
      placeholder="Search"
      placeholderTextColor="rgba(61,60,64,0.5)"
      searchIconCollapsedMargin={10}
      searchIconExpandedMargin={10}
      tintColorDelete="rgba(61,60,64,0.5)"
      tintColorSearch="rgba(61,60,64,0.5)"
      titleCancelColor="#3d3c40"
      value=""
    />
  </View>
  <CustomList
    canRefresh={true}
    data={Array []}
    isLandscape={false}
    listType="flat"
    loading={false}
    loadingComponent={null}
    noResults={null}
    onLoadMore={[Function]}
    onRowPress={[Function]}
    renderItem={[Function]}
    shouldRenderSeparator={true}
    showNoResults={true}
    theme={
      Object {
        "awayIndicator": "#ffbc42",
        "buttonBg": "#166de0",
        "buttonColor": "#ffffff",
        "centerChannelBg": "#ffffff",
        "centerChannelColor": "#3d3c40",
        "codeTheme": "github",
        "dndIndicator": "#f74343",
        "errorTextColor": "#fd5960",
        "linkColor": "#2389d7",
        "mentionBg": "#ffffff",
        "mentionBj": "#ffffff",
        "mentionColor": "#145dbf",
        "mentionHighlightBg": "#ffe577",
        "mentionHighlightLink": "#166de0",
        "newMessageSeparator": "#ff8800",
        "onlineIndicator": "#06d6a0",
        "sidebarBg": "#145dbf",
        "sidebarHeaderBg": "#1153ab",
        "sidebarHeaderTextColor": "#ffffff",
        "sidebarText": "#ffffff",
        "sidebarTextActiveBorder": "#579eff",
        "sidebarTextActiveColor": "#ffffff",
        "sidebarTextHoverBg": "#4578bf",
        "sidebarUnreadText": "#ffffff",
        "type": "Mattermost",
      }
    }
  />
</View>
`;

exports[`SelectorScreen should match snapshot for channels 2`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Connect(StatusBar) />
  <View
    style={
      Array [
        Object {
          "marginVertical": 5,
        },
        null,
      ]
    }
  >
    <SearchBarIos
      autoCapitalize="none"
      backgroundColor="transparent"
      blurOnSubmit={true}
      cancelTitle="Cancel"
      inputHeight={33}
      inputStyle={
        Object {
          "backgroundColor": "rgba(61,60,64,0.2)",
          "color": "#3d3c40",
          "fontSize": 15,
        }
      }
      keyboardAppearance="light"
      leftComponent={null}
      onBlur={[Function]}
      onCancelButtonPress={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSearchButtonPress={[Function]}
      onSelectionChange={[Function]}
      placeholder="Search"
      placeholderTextColor="rgba(61,60,64,0.5)"
      searchIconCollapsedMargin={10}
      searchIconExpandedMargin={10}
      tintColorDelete="rgba(61,60,64,0.5)"
      tintColorSearch="rgba(61,60,64,0.5)"
      titleCancelColor="#3d3c40"
      value=""
    />
  </View>
  <CustomList
    canRefresh={true}
    data={Array []}
    isLandscape={false}
    listType="flat"
    loading={false}
    loadingComponent={null}
    noResults={null}
    onLoadMore={[Function]}
    onRowPress={[Function]}
    renderItem={[Function]}
    shouldRenderSeparator={true}
    showNoResults={true}
    theme={
      Object {
        "awayIndicator": "#ffbc42",
        "buttonBg": "#166de0",
        "buttonColor": "#ffffff",
        "centerChannelBg": "#ffffff",
        "centerChannelColor": "#3d3c40",
        "codeTheme": "github",
        "dndIndicator": "#f74343",
        "errorTextColor": "#fd5960",
        "linkColor": "#2389d7",
        "mentionBg": "#ffffff",
        "mentionBj": "#ffffff",
        "mentionColor": "#145dbf",
        "mentionHighlightBg": "#ffe577",
        "mentionHighlightLink": "#166de0",
        "newMessageSeparator": "#ff8800",
        "onlineIndicator": "#06d6a0",
        "sidebarBg": "#145dbf",
        "sidebarHeaderBg": "#1153ab",
        "sidebarHeaderTextColor": "#ffffff",
        "sidebarText": "#ffffff",
        "sidebarTextActiveBorder": "#579eff",
        "sidebarTextActiveColor": "#ffffff",
        "sidebarTextHoverBg": "#4578bf",
        "sidebarUnreadText": "#ffffff",
        "type": "Mattermost",
      }
    }
  />
</View>
`;

exports[`SelectorScreen should match snapshot for explicit options 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Connect(StatusBar) />
  <View
    style={
      Array [
        Object {
          "marginVertical": 5,
        },
        null,
      ]
    }
  >
    <SearchBarIos
      autoCapitalize="none"
      backgroundColor="transparent"
      blurOnSubmit={true}
      cancelTitle="Cancel"
      inputHeight={33}
      inputStyle={
        Object {
          "backgroundColor": "rgba(61,60,64,0.2)",
          "color": "#3d3c40",
          "fontSize": 15,
        }
      }
      keyboardAppearance="light"
      leftComponent={null}
      onBlur={[Function]}
      onCancelButtonPress={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSearchButtonPress={[Function]}
      onSelectionChange={[Function]}
      placeholder="Search"
      placeholderTextColor="rgba(61,60,64,0.5)"
      searchIconCollapsedMargin={10}
      searchIconExpandedMargin={10}
      tintColorDelete="rgba(61,60,64,0.5)"
      tintColorSearch="rgba(61,60,64,0.5)"
      titleCancelColor="#3d3c40"
      value=""
    />
  </View>
  <CustomList
    canRefresh={true}
    data={
      Array [
        Object {
          "text": "text",
          "value": "value",
        },
      ]
    }
    isLandscape={false}
    listType="flat"
    loading={false}
    loadingComponent={null}
    noResults={null}
    onLoadMore={[Function]}
    onRowPress={[Function]}
    renderItem={[Function]}
    shouldRenderSeparator={true}
    showNoResults={true}
    theme={
      Object {
        "awayIndicator": "#ffbc42",
        "buttonBg": "#166de0",
        "buttonColor": "#ffffff",
        "centerChannelBg": "#ffffff",
        "centerChannelColor": "#3d3c40",
        "codeTheme": "github",
        "dndIndicator": "#f74343",
        "errorTextColor": "#fd5960",
        "linkColor": "#2389d7",
        "mentionBg": "#ffffff",
        "mentionBj": "#ffffff",
        "mentionColor": "#145dbf",
        "mentionHighlightBg": "#ffe577",
        "mentionHighlightLink": "#166de0",
        "newMessageSeparator": "#ff8800",
        "onlineIndicator": "#06d6a0",
        "sidebarBg": "#145dbf",
        "sidebarHeaderBg": "#1153ab",
        "sidebarHeaderTextColor": "#ffffff",
        "sidebarText": "#ffffff",
        "sidebarTextActiveBorder": "#579eff",
        "sidebarTextActiveColor": "#ffffff",
        "sidebarTextHoverBg": "#4578bf",
        "sidebarUnreadText": "#ffffff",
        "type": "Mattermost",
      }
    }
  />
</View>
`;

exports[`SelectorScreen should match snapshot for searching 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Connect(StatusBar) />
  <View
    style={
      Array [
        Object {
          "marginVertical": 5,
        },
        null,
      ]
    }
  >
    <SearchBarIos
      autoCapitalize="none"
      backgroundColor="transparent"
      blurOnSubmit={true}
      cancelTitle="Cancel"
      inputHeight={33}
      inputStyle={
        Object {
          "backgroundColor": "rgba(61,60,64,0.2)",
          "color": "#3d3c40",
          "fontSize": 15,
        }
      }
      keyboardAppearance="light"
      leftComponent={null}
      onBlur={[Function]}
      onCancelButtonPress={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSearchButtonPress={[Function]}
      onSelectionChange={[Function]}
      placeholder="Search"
      placeholderTextColor="rgba(61,60,64,0.5)"
      searchIconCollapsedMargin={10}
      searchIconExpandedMargin={10}
      tintColorDelete="rgba(61,60,64,0.5)"
      tintColorSearch="rgba(61,60,64,0.5)"
      titleCancelColor="#3d3c40"
      value="name2"
    />
  </View>
  <CustomList
    canRefresh={true}
    data={Array []}
    isLandscape={false}
    listType="flat"
    loading={false}
    loadingComponent={null}
    noResults={null}
    onLoadMore={[Function]}
    onRowPress={[Function]}
    renderItem={[Function]}
    shouldRenderSeparator={true}
    showNoResults={true}
    theme={
      Object {
        "awayIndicator": "#ffbc42",
        "buttonBg": "#166de0",
        "buttonColor": "#ffffff",
        "centerChannelBg": "#ffffff",
        "centerChannelColor": "#3d3c40",
        "codeTheme": "github",
        "dndIndicator": "#f74343",
        "errorTextColor": "#fd5960",
        "linkColor": "#2389d7",
        "mentionBg": "#ffffff",
        "mentionBj": "#ffffff",
        "mentionColor": "#145dbf",
        "mentionHighlightBg": "#ffe577",
        "mentionHighlightLink": "#166de0",
        "newMessageSeparator": "#ff8800",
        "onlineIndicator": "#06d6a0",
        "sidebarBg": "#145dbf",
        "sidebarHeaderBg": "#1153ab",
        "sidebarHeaderTextColor": "#ffffff",
        "sidebarText": "#ffffff",
        "sidebarTextActiveBorder": "#579eff",
        "sidebarTextActiveColor": "#ffffff",
        "sidebarTextHoverBg": "#4578bf",
        "sidebarUnreadText": "#ffffff",
        "type": "Mattermost",
      }
    }
  />
</View>
`;

exports[`SelectorScreen should match snapshot for users 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Connect(StatusBar) />
  <View
    style={
      Array [
        Object {
          "marginVertical": 5,
        },
        null,
      ]
    }
  >
    <SearchBarIos
      autoCapitalize="none"
      backgroundColor="transparent"
      blurOnSubmit={true}
      cancelTitle="Cancel"
      inputHeight={33}
      inputStyle={
        Object {
          "backgroundColor": "rgba(61,60,64,0.2)",
          "color": "#3d3c40",
          "fontSize": 15,
        }
      }
      keyboardAppearance="light"
      leftComponent={null}
      onBlur={[Function]}
      onCancelButtonPress={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSearchButtonPress={[Function]}
      onSelectionChange={[Function]}
      placeholder="Search"
      placeholderTextColor="rgba(61,60,64,0.5)"
      searchIconCollapsedMargin={10}
      searchIconExpandedMargin={10}
      tintColorDelete="rgba(61,60,64,0.5)"
      tintColorSearch="rgba(61,60,64,0.5)"
      titleCancelColor="#3d3c40"
      value=""
    />
  </View>
  <CustomList
    canRefresh={true}
    data={Array []}
    isLandscape={false}
    listType="section"
    loading={false}
    loadingComponent={null}
    noResults={null}
    onLoadMore={[Function]}
    onRowPress={[Function]}
    renderItem={[Function]}
    shouldRenderSeparator={true}
    showNoResults={true}
    theme={
      Object {
        "awayIndicator": "#ffbc42",
        "buttonBg": "#166de0",
        "buttonColor": "#ffffff",
        "centerChannelBg": "#ffffff",
        "centerChannelColor": "#3d3c40",
        "codeTheme": "github",
        "dndIndicator": "#f74343",
        "errorTextColor": "#fd5960",
        "linkColor": "#2389d7",
        "mentionBg": "#ffffff",
        "mentionBj": "#ffffff",
        "mentionColor": "#145dbf",
        "mentionHighlightBg": "#ffe577",
        "mentionHighlightLink": "#166de0",
        "newMessageSeparator": "#ff8800",
        "onlineIndicator": "#06d6a0",
        "sidebarBg": "#145dbf",
        "sidebarHeaderBg": "#1153ab",
        "sidebarHeaderTextColor": "#ffffff",
        "sidebarText": "#ffffff",
        "sidebarTextActiveBorder": "#579eff",
        "sidebarTextActiveColor": "#ffffff",
        "sidebarTextHoverBg": "#4578bf",
        "sidebarUnreadText": "#ffffff",
        "type": "Mattermost",
      }
    }
  />
</View>
`;

exports[`SelectorScreen should match snapshot for users 2`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Connect(StatusBar) />
  <View
    style={
      Array [
        Object {
          "marginVertical": 5,
        },
        null,
      ]
    }
  >
    <SearchBarIos
      autoCapitalize="none"
      backgroundColor="transparent"
      blurOnSubmit={true}
      cancelTitle="Cancel"
      inputHeight={33}
      inputStyle={
        Object {
          "backgroundColor": "rgba(61,60,64,0.2)",
          "color": "#3d3c40",
          "fontSize": 15,
        }
      }
      keyboardAppearance="light"
      leftComponent={null}
      onBlur={[Function]}
      onCancelButtonPress={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSearchButtonPress={[Function]}
      onSelectionChange={[Function]}
      placeholder="Search"
      placeholderTextColor="rgba(61,60,64,0.5)"
      searchIconCollapsedMargin={10}
      searchIconExpandedMargin={10}
      tintColorDelete="rgba(61,60,64,0.5)"
      tintColorSearch="rgba(61,60,64,0.5)"
      titleCancelColor="#3d3c40"
      value=""
    />
  </View>
  <CustomList
    canRefresh={true}
    data={Array []}
    isLandscape={false}
    listType="section"
    loading={false}
    loadingComponent={null}
    noResults={null}
    onLoadMore={[Function]}
    onRowPress={[Function]}
    renderItem={[Function]}
    shouldRenderSeparator={true}
    showNoResults={true}
    theme={
      Object {
        "awayIndicator": "#ffbc42",
        "buttonBg": "#166de0",
        "buttonColor": "#ffffff",
        "centerChannelBg": "#ffffff",
        "centerChannelColor": "#3d3c40",
        "codeTheme": "github",
        "dndIndicator": "#f74343",
        "errorTextColor": "#fd5960",
        "linkColor": "#2389d7",
        "mentionBg": "#ffffff",
        "mentionBj": "#ffffff",
        "mentionColor": "#145dbf",
        "mentionHighlightBg": "#ffe577",
        "mentionHighlightLink": "#166de0",
        "newMessageSeparator": "#ff8800",
        "onlineIndicator": "#06d6a0",
        "sidebarBg": "#145dbf",
        "sidebarHeaderBg": "#1153ab",
        "sidebarHeaderTextColor": "#ffffff",
        "sidebarText": "#ffffff",
        "sidebarTextActiveBorder": "#579eff",
        "sidebarTextActiveColor": "#ffffff",
        "sidebarTextHoverBg": "#4578bf",
        "sidebarUnreadText": "#ffffff",
        "type": "Mattermost",
      }
    }
  />
</View>
`;
